--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,62 @@
-icewm -- history of user-visible changes.  2020-12-14
+icewm -- history of user-visible changes.  2021-01-02
+
+Release icewm-2.0.1 released 2021-01-02
+---------------------------------------
+
+git shortlog -e -n -w80,6,8 2.0.0...2.0.1
+
+Bert Gijsbers <gijsbers@science.uva.nl> (15):
+      Handle horizontal scroll keys in window list window.
+      Search for icewm icon for internal windows.
+      Fix setting option values for #535.
+      Allow to set background opacity for QuickSwitch background for #534.
+      Clarify startMoveSize.
+      Communicate the window ID of the icon window in WM_STATE when iconifying
+        to desktop.
+      Make isUrgent a member of ClientData.
+      Reset horizontal scrolling when using the Home and End keys for the window
+        list.
+      Add IceVM explanation to README for ice-wm/icewm#35
+      Update to 2.0.0.
+      Note that support was added for icon_pixmap and icon_window fields of
+        WM_HINTS property in 2.0.0.
+      Improve getting icon window for WM_STATE.
+      Fix spelling of Gerenciador for pt_BR.
+      Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
+        icewm-1-4-BRANCH
+      Merge branch 'icewm-1-4-BRANCH'
+
+Aleš Kastner <alkas@volny.cz> (1):
+      Translated using Weblate (Czech)
+
+David Medina <medipas@gmail.com> (1):
+      Translated using Weblate (Catalan)
+
+Ferdinand Galko <galko.ferdinand@gmail.com> (1):
+      Translated using Weblate (Slovak)
+
+Freek de Kruijf <freek@opensuse.org> (1):
+      Translated using Weblate (Dutch)
+
+Hugo Carvalho <hugokarvalho@hotmail.com> (1):
+      Translated using Weblate (Portuguese)
+
+Kukuh Syafaat <syafaatkukuh@gmail.com> (1):
+      Translated using Weblate (Indonesian)
+
+Luiz Fernando Ranghetti <elchevive68@gmail.com> (1):
+      Translated using Weblate (Portuguese (Brazil))
+
+Yasuhiko Kamata <belphegor@belbel.or.jp> (1):
+      Translated using Weblate (Japanese)
+
 
 Release icewm-2.0.0 released 2020-12-14
 ---------------------------------------
 
 git shortlog -e -n -w80,6,8 1.9.2...2.0.0
 
-Bert Gijsbers <gijsbers@science.uva.nl> (57):
+Bert Gijsbers <gijsbers@science.uva.nl> (58):
       Fix positioning of window list title for non-standard SmallIconSize
         settings for issue #514.
       Remove wmmgr.h from wmframe.h. Add classHint() to ClientData.
@@ -72,6 +123,7 @@ Bert Gijsbers <gijsbers@science.uva.nl> (57):
       Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
         icewm-1-4-BRANCH
       Merge branch 'icewm-1-4-BRANCH'
+      Prepare 2.0.0 release
 
 Eduard Bloch <blade@debian.org> (5):
       Revert "Revert "Stop overpainting clock every second when not needed""
@@ -408,51 +460,4 @@ Code7R <Code7R@users.noreply.github.com> (2):
 
 Hugo Carvalho <hugokarvalho@hotmail.com> (1):
       Update Portuguese (pt) translations (#486)
-
-
-Release icewm-1.8.1 released 2020-08-31
----------------------------------------
-
-git shortlog -e -n -w80,6,8 1.8.0...1.8.1
-
-Bert Gijsbers <gijsbers@science.uva.nl> (29):
-      Fix typo for the KeySysArrangeIcons key binding.
-      Fix path_lookup strtok_r for non-Glibc BSD systems for ice-wm/icewm#23.
-      Only define KeySysArrangeIcons if preference MinimizeToDesktop=1.
-      Remove double buffering from YWindow.
-      Prevent premature workarea changes when collapsing taskbar to avoid
-        repositioning MiniIcons.
-      Remove 4 bools from YWindow.
-      Free logoutMenu on exit.
-      Fix topSideVerticalOffset for fully opaque frame borders for #482.
-      Also spy on ClientMessages.
-      Free fonts when done.
-      More spy output details.
-      Remove undocumented KeyWinSnapMove. Add KeyWinSmartPlace to preferences.
-      Prevent cyclic transients. Optimize setCurrentPositionOuter.
-      Update man pages.
-      Workaround for absent wordexp on OpenBSD.
-      Remove comments from include statements.
-      Update dependencies in Makefile.am.
-      make update-po.
-      Cast we_wordc for OpenBSD.
-      Changes for OpenBSD.
-      Fix for --disable-shape.
-      Fix for --disable-gdk-pixbuf.
-      Restrict ICE_COMMON_SRCS to essentials.
-      Fix the FreeBSD case where icewm-session is started in the root directory
-        by the display manager.
-      Fixes for reading from a pipe.
-      Don't show error if timed out.
-      Merge remote-tracking branch 'upstream/icewm-1-4-BRANCH' into
-        icewm-1-4-BRANCH
-      Merge branch 'icewm-1-4-BRANCH'
-      Prepare 1.8.1 release
-
-Eduard Bloch <blade@debian.org> (2):
-      Fix memory leak from path_lookup call
-      Fixup DEBUG build
-
-Code7R <Code7R@users.noreply.github.com> (1):
-      Feature/smart pointer in file reader (#463)
 
